...
  "promptPassword": "Password",
  "@promptPassword": {
    "description": "Placeholder text for password field on login form",
    "type": "text",
    "placeholders": {}
  },
  "promptSubmitLogin": "Login",
  "@promptSubmitLogin": {
    "description": "Prompt to submit the username and password, and attempt to login",
    "type": "text",
    "placeholders": {}
  },
  "messageLoginFailed": "Login Failed...",
...
  "promptJoin": "Join",
  "@promptJoin": {
    "description": "Generic prompt to join a room",
    "type": "text",
    "placeholders": {}
  },
  "promptSubmit": "Submit",
  "@promptSubmit": {
    "description": "Generic prompt to submit something",
    "type": "text",
    "placeholders": {}
  },
  "promptContinue": "Continue",
...
