...
  }

  static String? getDetailFromStackTrace(StackTrace stack) {
    String? info;

    var str = stack.toString();
    var match = RegExp(r"([a-zA-Z0-9_]*)\.([a-zA-Z0-9_]*)").firstMatch(str);
    if (match != null) {
      info = str.substring(match.start, match.end);
    }

    return info;
  }
...
